--- a/demo.html
+++ b/demo.html
@@ -30,7 +30,7 @@
 		<main>
 			<p>A web component to improves user experience by reducing typos and suggesting valid email addresses.</p>
 			<form method="post">
-				<email-suggestion data-domains="GMAIL.com, zoho.com, proton.me" data-suggestion="It's possible your email is %email%?">
+				<email-suggestion data-domains="gmail.com, outlook.com, zoho.com, proton.me" data-suggestion="It's possible your email is %email%?">
 					<label for="email">Email</label>
 					<input id="email" name="email" type="email">
 				</email-suggestion>
